# liath-rs

./: Cargo.toml  README.md
src/: main.rs
src/ai/: embedding.rs  llm.rs  mod.rs
src/auth/: manager.rs  mod.rs
src/cli/: console.rs
src/core/: mod.rs  namespace.rs  rocksdb_wrapper.rs
src/file/: mod.rs  processing.rs  storage.rs
src/lua/: luarocks.rs  mod.rs  modules.rs  vm.rs
src/proto/: ai_first_db.proto
src/query/: executor.rs  mod.rs  parser.rs
src/server/: api.rs  mod.rs
src/vector/: mod.rs  usearch_wrapper.rs
